GH-1494 - Include bean definitions from @TestConfiguration classes in test run.